# gestao-a-vista

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  generate_pwa_icons.py  pytest-dev.ini  pytest.ini  requirements-dev.txt  requirements.txt  run_https_server.py  run_tests.py  setup_local.py  version.py
Gestao_a_Vista/: admin.py  apps.py  audit_utils.py  context_processors.py  db_manager.py  db_router.py  decorators.py  forms.py  hashers.py  logging_config.py  logging_filters.py  middleware.py  middleware_https.py  models.py  models_relatorios.py  monitoring_middleware.py  qr_code_service.py  qr_exceptions.py  qr_logger.py  qr_validators.py  signals.py  thread_local.py  uazapi_client.py  urls.py  urls_temp.py  views.py  views_temp.py
config/: settings.py  settings_test.py  urls.py
docker/: alert_rules.yml  gunicorn.conf.py  nginx.conf  prometheus.yml  supervisord.conf
psicossocial/: .gitignore  __init__.py  cli.py  excel_export.py  excel_import.py  processing.py  pyproject.toml  report_docx.py  score.py  workforce.py
psicossocial/config/: metodologia_v1.yaml
psicossocial/scripts/: classificar_score.bat  diagnosticar_excel.bat  exportar_excel.bat  processar_excel.bat  rodar_testes.bat  validar_metodologia.bat
psicossocial/src/psicossocial/: excel_export.py  excel_import.py  metodologia.py  processing.py  workforce.py
psicossocial/tests/: test_excel_export.py  test_excel_import.py  test_metodologia.py  test_processing.py  test_score.py  test_workforce.py
scripts/: deploy.sh  (+5 more)
(+202 files in other folders)
